--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 PORT=8080
+JWT_SECRET="dota2"
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
