--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@prisma/client": "^4.14.0",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.4.7",
     "axios": "^1.4.0",
