--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
 PORT=8080
 JWT_SECRET="dota2"
+CLIENT_URL="http://localhost:5173"
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
